[gd_scene load_steps=22 format=2]

[ext_resource path="res://turret_main.gd" type="Script" id=1]
[ext_resource path="res://turret.gd" type="Script" id=2]
[ext_resource path="res://Assets/Objects/turretbase.png" type="Texture" id=3]
[ext_resource path="res://Assets/Objects/turretgun.png" type="Texture" id=4]
[ext_resource path="res://Assets/Animations/smallblast1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Animations/smallblast2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Animations/smallblast3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Animations/light.png" type="Texture" id=8]
[ext_resource path="res://Assets/Animations/laser.png" type="Texture" id=9]
[ext_resource path="res://Assets/Objects/turretreticule.png" type="Texture" id=10]
[ext_resource path="res://Assets/SFX/turret_single_shot.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/SFX/alarm2.wav" type="AudioStream" id=12]
[ext_resource path="res://Assets/SFX/mech_moving.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/SFX/mech_moving_inverted.wav" type="AudioStream" id=14]
[ext_resource path="res://enemy_hp_bar.tscn" type="PackedScene" id=15]

[sub_resource type="Animation" id=1]
resource_name = "rotation"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 45.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../collision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0, 45.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../armdown:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../armdown/armup:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "shot",
"speed": 20.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "lighting"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 10, 10, 10, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 178.85
gravity = Vector3( 0, 98, 0 )
initial_velocity = 102.56
initial_velocity_random = 0.69
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="Animation" id=6]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7 ),
"transitions": PoolRealArray( 1.07177, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 50, 0, 1 ), Color( 1, 10, 1, 1 ), Color( 10, 0, 0, 1 ), Color( 1, 10, 1, 1 ), Color( 10, 0, 0, 1 ), Color( 1, 10, 1, 1 ), Color( 10, 0, 0, 1 ), Color( 1, 10, 1, 1 ), Color( 10, 0, 0, 1 ), Color( 1, 10, 1, 1 ), Color( 10, 0, 0, 1 ), Color( 1, 10, 1, 1 ), Color( 10, 0, 0, 1 ), Color( 1, 10, 1, 1 ), Color( 10, 0, 0, 1 ), Color( 1, 10, 1, 1 ), Color( 10, 0, 0, 1 ) ]
}

[node name="turret" type="Node2D"]
script = ExtResource( 1 )

[node name="turret" type="Area2D" parent="."]
script = ExtResource( 2 )

[node name="base" type="Sprite" parent="turret"]
position = Vector2( 6.22453, -0.214638 )
scale = Vector2( 1, -1 )
texture = ExtResource( 3 )

[node name="gun" type="Sprite" parent="turret"]
rotation = 0.785398
texture = ExtResource( 4 )

[node name="anim" type="AnimationPlayer" parent="turret/gun"]
anims/rotation = SubResource( 1 )

[node name="aim" type="RayCast2D" parent="turret/gun"]
scale = Vector2( 1, 5 )
enabled = true
cast_to = Vector2( 180, 0 )
collision_mask = 524288

[node name="shot3" type="AnimatedSprite" parent="turret/gun"]
position = Vector2( 22.2138, 0.56958 )
rotation = 1.5708
z_index = -2
frames = SubResource( 2 )
animation = "shot"
playing = true

[node name="shot_spark" type="Light2D" parent="turret/gun/shot3"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="anim" type="AnimationPlayer" parent="turret/gun/shot3/shot_spark"]
anims/lighting = SubResource( 3 )

[node name="lasersight" type="Sprite" parent="turret/gun"]
modulate = Color( 10, 0, 0, 1 )
position = Vector2( 92, 0 )
scale = Vector2( 4.5, 0.1 )
z_index = -2
texture = ExtResource( 9 )

[node name="collision" type="CollisionPolygon2D" parent="turret"]
rotation = 0.785398
polygon = PoolVector2Array( -3.74138, 6.35048, 3.97144, 6.2403, 20.9397, 2.49407, 21.16, -1.36234, 2.64924, -5.5493, -10.5727, -3.23545, -10.2422, 3.70609 )

[node name="anim" type="AnimationPlayer" parent="turret"]
anims/hit = SubResource( 4 )

[node name="sparks" type="Particles2D" parent="turret"]
scale = Vector2( 2, 2 )
emitting = false
amount = 15
lifetime = 0.5
one_shot = true
explosiveness = 0.97
process_material = SubResource( 5 )

[node name="shot" type="Timer" parent="turret"]
wait_time = 0.15

[node name="acquiringtarget" type="Timer" parent="turret/shot"]
wait_time = 2.0
one_shot = true

[node name="reticule" type="Sprite" parent="turret"]
modulate = Color( 0.0895582, 46.4177, 0.0895582, 1 )
texture = ExtResource( 10 )

[node name="anim" type="AnimationPlayer" parent="turret/reticule"]
anims/reticule = SubResource( 6 )

[node name="shooting" type="AudioStreamPlayer2D" parent="turret"]
stream = ExtResource( 11 )

[node name="alert" type="AudioStreamPlayer2D" parent="turret"]
stream = ExtResource( 12 )
volume_db = -10.0
max_distance = 400.0

[node name="armdown" type="AudioStreamPlayer2D" parent="turret"]
stream = ExtResource( 13 )
volume_db = -20.0
max_distance = 400.0

[node name="armup" type="AudioStreamPlayer2D" parent="turret/armdown"]
stream = ExtResource( 14 )
volume_db = -20.0
max_distance = 400.0

[node name="enemy_hp_bar" parent="." instance=ExtResource( 15 )]
position = Vector2( 0, 20 )

[connection signal="timeout" from="turret/shot" to="turret" method="_on_shot_timeout"]
[connection signal="timeout" from="turret/shot/acquiringtarget" to="turret" method="_on_acquiringtarget_timeout"]
